fix align issues

--- a/style.css
+++ b/style.css
@@ -296,10 +296,10 @@ section {
 
 .navbar {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   height: 100%;
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
